# sw

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
coroutine/include/: sw_coroutine.hpp
include/: sw.h  sw.hpp  sw_vals.h
include/details/: sw_config.h  sw_vals.h
include/details/json/: CMakeLists.txt
include/details/json/include/: json.hpp
include/details/json/include/detail/conversions/: base64.hpp
include/details/json/include/details/conversions/: from_json.hpp
include/details/json/include/details/input/: lexer.hpp  parser.hpp
include/details/log/: CMakeLists.txt
include/details/log/include/: sw_log.h  sw_log.hpp  sw_log.ipp
include/details/log/src/: sw_log.cc
include/details/properties/: CMakeLists.txt
include/details/properties/include/: sw_properties.hpp  sw_properties.ipp
include/details/properties/src/: sw_properties.cc
include/details/threadpool/: CMakeLists.txt
include/details/threadpool/include/: sw_coroutine.hpp  sw_queue_core.h  sw_queue_core.hpp  sw_queue_core.ipp  sw_task_core.hpp  sw_task_core.ipp  sw_thread.h  sw_thread.hpp  sw_thread.ipp  sw_threadpool.hpp  sw_threadpool.ipp
include/details/threadpool/lib/: libthreadpool_shared.so.1  libthreadpool_shared.so.1.0
include/details/threadpool/src/: sw_coroutine.cc  sw_queue_core.cc  sw_task_core.cc  sw_thread.cc  sw_threadpool.cc
include/details/time/include/: sw_clock.hpp  sw_time.hpp  sw_time.ipp
include/sw/: sw.hpp  sw_coroutine.hpp  sw_http.hpp  sw_log.hpp  sw_properties.hpp  sw_queue_core.hpp  sw_socket.hpp  sw_task_core.hpp  sw_thread.hpp  sw_threadpool.hpp  sw_time.hpp  sw_vals.h
include/sw/internal/: sw_coroutine.hpp  sw_log.ipp  sw_properties.ipp  sw_queue_core.hpp  sw_queue_core.ipp  sw_task_core.hpp  sw_task_core.ipp  sw_thread.hpp  sw_thread.ipp  sw_threadpool.ipp  sw_time.ipp  sw_vals.h
include/sw/utils/: sw_string_utils.hpp
json/include/: json.hpp
json/include/detail/: type.hpp
json/include/detail/input/: input_adapters.hpp  lexer.hpp
json/include/detail/output/: serializer.hpp
json/tests/main/: a.out  main.cpp
log/: CMakeLists.txt
log/include/: sw_log.h
log/src/: sw_log.cc
serialize/include/detail/conversions/: base64.hpp
serialize/include/detail/input/: lexer.hpp
serialize/include/detail/iterators/: iterator.hpp
serialize/tests/detail/type/: type.cpp
serialize/tests/main/: main.cpp
src/: sw_coroutine.cc  sw_log.cc  sw_properties.cc  sw_queue_core.cc  sw_socket.cc  sw_string_utils.cc  sw_task_core.cc  sw_thread.cc  sw_threadpool.cc
test/: CMakeLists.txt  sw_log.properties  sw_test_all.cpp
threadpool/: CMakeLists.txt
threadpool/include/: a.out  sw_epoll_core.h  sw_queue_core.h  sw_task_core.hpp  sw_thread.h  sw_threadpool.hpp
threadpool/src/: sw_epoll_core.cc  sw_queue_core.cc  sw_thread.cc  test.cpp
time/include/: sw_clock.hpp
