cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(sw)

set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/sw)
set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
set(ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
set(LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
set(LIBRARY_NAME "sw")

include_directories(${INCLUDE_DIR})

file(GLOB SW_SRCS "${SRC_DIR}/*.cc")

add_library(${LIBRARY_NAME}_static STATIC ${SW_SRCS})
add_library(${LIBRARY_NAME}_shared SHARED ${SW_SRCS})

set_target_properties(${LIBRARY_NAME}_static PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${ARCHIVE_OUTPUT_DIRECTORY}
    OUTPUT_NAME ${LIBRARY_NAME}
)

set_target_properties(${LIBRARY_NAME}_shared PROPERTIES
    VERSION 1.0
    SOVERSION 1
    LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_DIRECTORY}
    OUTPUT_NAME ${LIBRARY_NAME}
    INSTALL_RPATH ${LIBRARY_OUTPUT_DIRECTORY}
)

target_include_directories(${LIBRARY_NAME}_static PUBLIC ${INCLUDE_DIR})
target_include_directories(${LIBRARY_NAME}_shared PUBLIC ${INCLUDE_DIR})
